cluster/gitops/games/minecraft/ftb-stoneblock-3/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft-ftb-stoneblock-3
specs:
  - description: minecraft-ftb-stoneblock-3
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: minecraft
        app.kubernetes.io/instance: minecraft-ftb-stoneblock-3
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
                - matchName: api.curseforge.com
      # Download mods and other files.
      # The amount of "phoning home" that mods do is nuts.
      - toCIDRSet:
          - cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # Gateway to webservice
      - fromEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/minecraft-router: "true"
        toPorts:
          - ports:
              - port: "25565"
                protocol: TCP
